# share-mouse

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/core/: mod.rs  network.rs  protocol.rs  screen.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
