[package]
name = "share-mouse"
version = "0.3.0"
description = "Share mouse and keyboard across Mac and Windows"
authors = ["ShareMouse"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"

# Serialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"

# Utilities
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
bitflags = "2.6"

# Platform-specific
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
objc = "0.2"
block = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_DataExchange",
] }
